# projet-kafka

./: README.md
kafka-clients/: pom.xml
kafka-clients/src/main/resources/: kafka.properties
kafka-clients/src/main/scala/org/esgi/project/: Main.scala
kafka-clients/src/main/scala/org/esgi/project/kafka/: KafkaConfig.scala  MessageProcessing.scala  SimpleSchedulingLoops.scala
kafka-clients/src/main/scala/org/esgi/project/kafka/models/: ConnectionEvent.scala
kafka-stream/: .gitignore  pom.xml
kafka-stream/src/main/resources/: kafka.properties
kafka-stream/src/main/scala/org/esgi/project/: Main.scala
kafka-stream/src/main/scala/org/esgi/project/api/: WebServer.scala
kafka-stream/src/main/scala/org/esgi/project/api/models/: MeanLatencyForURLResponse.scala  MovieScore.scala  Stats.scala  ViewsCountResponse.scala  VisitCountResponse.scala
kafka-stream/src/main/scala/org/esgi/project/streaming/: StreamProcessing.scala
kafka-stream/src/main/scala/org/esgi/project/streaming/models/: Likes.scala  MeanLatencyForURL.scala  MeanScoreForMovies.scala  Metric.scala  ViewCategorie.scala  Views.scala  ViewsWithLikes.scala  Visit.scala  VisitWithLatency.scala
movies-views/: .env  .gitignore  .prospector.yml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
movies-views/movies_views_injector/: __main__.py  app.py  models.py  source.py
