
[tool.poetry]
name = "movies-views"
version = "0.1.0"
description = ""
authors = ["Jonathan Raffre <jonathan@raff.re>"]

[tool.poetry.dependencies]
python = "^3.7"
faust = "^1.10.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
prospector = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
